# torrefuerte-pos-migracion

./: index.html  package-lock.json  package.json  tailwind.config.js
db/: schema_FINAL.sql  torrefuerte.db
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: impresion.rs  mod.rs  productos.rs  reportes.rs  sistema.rs  ventas.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: mod.rs
src/api/: tauri.ts
src/components/: ProductoCard.tsx  index.ts
src/components/admin/: SalesHistory.tsx
src/components/layout/: Footer.tsx  MainLayout.tsx  Sidebar.tsx  index.ts
src/components/ui/: DatePicker.tsx
src/pages/: Login.tsx
src/pages/admin/: BaseDatos.tsx  Dashboard.tsx  Devoluciones.tsx  ImportarProductos.tsx  Productos.tsx  RellenarStock.tsx  Reportes.tsx  Ventas.tsx  index.ts
src/pages/admin/productos/: index.ts  types.ts
src/pages/admin/productos/components/: ProductoForm.tsx  ProductoModal.tsx  ProductosSidebar.tsx  ProductosTable.tsx  ProductosToolbar.tsx
src/pages/admin/productos/hooks/: useProductos.ts  useProductosFiltros.ts
src/pages/vendedor/: CorteCaja.tsx  Dashboard.tsx  VerificarPrecios.tsx  index.ts
src/pages/vendedor/dashboard/: index.ts  types.ts
src/pages/vendedor/dashboard/components/: BusquedaPanel.tsx  CarritoItemRow.tsx  CarritoPanel.tsx  PagoZona.tsx
src/pages/vendedor/dashboard/hooks/: useBusqueda.ts  useCarrito.ts  useVenta.ts
src/utils/: dateFormat.ts  swal.ts
