[package]
name = "torrefuerte"
version = "0.1.0"
description = "Sistema POS para Ferreterías"
authors = ["TorreFuerte"]
edition = "2021"

[lib]
name = "torrefuerte_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Base de datos SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# Hashing de contraseñas
bcrypt = "0.15"

# Fechas y tiempo
chrono = { version = "0.4", features = ["serde"] }

# UUID para folios
uuid = { version = "1", features = ["v4"] }

# Excel para reportes e importación
rust_xlsxwriter = "0.64"
base64 = "0.22.1"

# Windows API para impresión
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Graphics_Printing", "Win32_Graphics_Gdi", "Win32_Storage_FileSystem", "Win32_System_IO"] }

